--- a/eks.yaml
+++ b/eks.yaml
@@ -1,10 +1,10 @@
-apiversion: eksctl.io/v1alpha5
+apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 metadata: 
-  name: expense-1
+  name: expense
   region: us-east-1
 managedNodeGroups:
   - name: expense
-    instance type: m5.large
-    desired capacity: 3
+    instanceType: m5.large
+    desiredCapacity: 3
     spot: true
