--- a/practice.yaml
+++ b/practice.yaml
@@ -1,7 +1,10 @@
 apiVersion: v1
-kind: Namespace
+kind: Pod
 metadata: 
   name: exxpense
   labels:
     project: expense
-    
+spec:
+  containers:
+  - name: nginx
+    image: nginx
