--- a/practice.yaml
+++ b/practice.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata: 
-  name: exxpense
+  name: expense
   labels:
     project: expense
+    environment: dev
 spec:
   containers:
   - name: nginx
