--- a/practice.yaml
+++ b/practice.yaml
@@ -9,6 +9,10 @@ spec:
   containers:
   - name: nginx
     image: nginx
-    env:  
-      - name: course
-        value: devops
+    resources:
+      requests:  
+        cpu: 100m
+        memory: 120Mi
+      limits: 
+        cpu: 120m
+        memory: 130Mi
