--- a/practice.yaml
+++ b/practice.yaml
@@ -9,10 +9,7 @@ spec:
   containers:
   - name: nginx
     image: nginx
-    resources:
-      requests:  
-        cpu: 100m
-        memory: 120Mi
-      limits: 
-        cpu: 120m
-        memory: 130Mi
+    envFrom:
+    - ConigMapRef
+      name: expense
+        
