--- a/practice.yaml
+++ b/practice.yaml
@@ -10,6 +10,6 @@ spec:
   - name: nginx
     image: nginx
     envFrom:
-      - ConigMapRef
-          name: expense
+    - ConfigMapRef
+        name: expense
 
