--- a/practice.yaml
+++ b/practice.yaml
@@ -9,6 +9,9 @@ spec:
   containers:
   - name: nginx
     image: nginx
-    envFrom:
-    - configMapRef:
-        name: expense
+    env:  
+      - name: project
+      valueFrom:
+        configMapKeyRe:
+          name: expense
+          key: project
