--- a/practice.yaml
+++ b/practice.yaml
@@ -1,17 +1,28 @@
 apiVersion: v1
 kind: Pod
-metadata: 
-  name: expense
-  annotations:
+metadata:
+  name: nginx
+  labels:
     project: expense
     environment: dev
+    module: something
 spec:
   containers:
   - name: nginx
     image: nginx
-    env:  
-      - name: project
-        valueFrom:
-          configMapKeyRef:
-            name: expense
-            key: project
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: svc
+spec:
+  selector:
+    project: expense
+    environment: dev
+    module: something
+
+  ports:
+  - name: svc-port
+    protocol: TCP
+    port: 80
+    targetPort: 80   
