--- a/practice.yaml
+++ b/practice.yaml
@@ -16,7 +16,7 @@ kind: Service
 metadata:
   name: svc
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     project: expense
     environment: dev
